test_suite/ui/zero_disciminant.stderr
error: Flags must have exactly one set bit
 --> $DIR/zero_disciminant.rs:5:5
  |
5 |     Zero = 0,
  |     ^^^^^^^^
