test_suite/ui/zero_disciminant.rs
#[enumflags2::bitflags]
#[repr(u8)]
#[derive(Copy, Clone)]
enum Foo {
    Zero = 0,
}

fn main() {}
